--- a/ctf-6/package.json
+++ b/ctf-6/package.json
@@ -1,7 +1,16 @@
 {
+  "name": "ctf-4",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
-    "dotenv": "^16.0.0",
     "hardhat": "^2.9.3"
   },
   "devDependencies": {
