--- a/ctf-4/package.json
+++ b/ctf-4/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@openzeppelin/contracts": "^4.6.0",
     "dotenv": "^16.0.0",
     "hardhat": "^2.9.3"
