--- a/ctf-2/package.json
+++ b/ctf-2/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@openzeppelin/contracts": "^4.6.0",
+    "dotenv": "^16.0.0",
     "hardhat": "^2.9.3"
   },
   "devDependencies": {
