--- a/ctf-6/package.json
+++ b/ctf-6/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@flashbots/ethers-provider-bundle": "^0.4.3",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@openzeppelin/contracts": "^4.6.0",
+    "dotenv": "^16.0.0",
     "hardhat": "^2.9.3"
   },
   "devDependencies": {
